--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
   /* Fonts */
   @font-face {
     font-family: "Monoton";
-    src: url("../fonts/Monoton/Monoton-Regular.ttf") format("truetype");
+    src: url("../fonts/Monoton/Monoton-Regular.woff2") format("woff2");
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -18,7 +18,7 @@
 
   @font-face {
     font-family: "Rubik";
-    src: url("../fonts/rubik/Rubik-Regular.ttf") format("truetype");
+    src: url("../fonts/rubik/Rubik-Regular.woff2") format("woff2");
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -26,7 +26,7 @@
 
   @font-face {
     font-family: "Rubik";
-    src: url("../fonts/rubik/Rubik-Bold.ttf") format("truetype");
+    src: url("../fonts/rubik/Rubik-Bold.woff2") format("woff2");
     font-weight: 700;
     font-style: normal;
     font-display: swap;
@@ -34,7 +34,7 @@
 
   @font-face {
     font-family: "Rubik";
-    src: url("../fonts/rubik/Rubik-Italic.ttf") format("truetype");
+    src: url("../fonts/rubik/Rubik-Italic.woff2") format("woff2");
     font-weight: 400;
     font-style: italic;
     font-display: swap;
@@ -301,6 +301,7 @@
 
   .ratio-box img {
     filter: contrast(1.5);
+    border: var(--dash-invert);
   }
 
   /* Blurb content */
@@ -341,6 +342,7 @@
     height: 50vh;
     object-fit: cover;
     display: block;           /* ensures it behaves predictably inside flex */
+    border: var(--dash);
   }
 
   .about p {
@@ -350,6 +352,10 @@
 
   /* Forms (scoped to .contact page) */
   .contact article { text-align: center; }
+
+  .contact h3 {
+    overflow: auto;
+  }
 
   .contact form {
     margin: 2em 0;
